--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,30 @@
 .App {
-  text-align: center;
+  min-height:100vh;
+  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.search-form{
+  min-height:10vh;
+  display:flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items:center;
 }
 
-.App-link {
-  color: #61dafb;
+.search-bar{
+  width:50%;
+  border:none;
+  padding:10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search-button{
+  background:lightcoral;
+  border:none;
+  padding:10px 20px;
+  color:white;
+}
+
+.recipes{
+  display:flex;
+  justify-content: space-around;
+  flex-wrap:wrap;
 }
